fixing gap between blueboxes on home

--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ address a {
 /************* our work container *************/
 
 #bluebox_home_left {
-    width: 239px;
+    width: 241px;
     margin-left: 17px;
     float: left;
 }
